--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="de">
 <head>
 
+	
 	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
+	
 	<link rel="stylesheet" href="styles.css"> 
 	<title>Simplechat</title> 
 </head> 
@@ -12,26 +13,15 @@
 		<section id="title">
 			<h1>SimpleChat</h1>
 		</section>
-		<section id="output">
-			<div class="message">
-				<span class="user">Hans:</span>
-				<span class="text">hello </span>
-			</div>
-			<div class="message">
-				<span class="user">ben:</span>
-				<span class="text">hello </span>
-			</div>
-			<div class="message">
-				<span class="user">Hans:</span>
-				<span class="text">Hru </span>
-			</div>
-		</section>
+		<section id="output"></section>
 		<section id="input">
 			<form>
-				<div class="user">Hans</div>
+				<div class="user"></div>
 				<input type="text" value="" placeholder="message">
 				<button type="submit">send</button>
 			</form>
 		</section>
 	</article>
+	
+	<script language="javascript" type="text/javascript" src="script.js"></script>
 </body>
