--- a/index.html
+++ b/index.html
@@ -9,16 +9,33 @@
 	<title>Simplechat</title> 
 </head> 
 <body>
-	<article>
+	<article id="chat">
 		<section id="title">
 			<h1>SimpleChat</h1>
 		</section>
 		<section id="output"></section>
-		<section id="input">
+		<section id="msgInput">
 			<form>
 				<div class="user"></div>
 				<input type="text" value="" placeholder="message">
 				<button type="submit">send</button>
+			</form>
+		</section>
+	</article>
+	<article id="login">
+		<section>
+			<form>
+				<div>
+					<label>name</label>
+					<input type="typetext" value="" placeholder="name" >
+				</div> 
+				<div>
+					<label>color</label>
+					<input type="typetext" value="" placeholder="color">
+				</div>
+				<div>
+					<button type="submit">go</button>
+				</div>
 			</form>
 		</section>
 	</article>
