--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<title>Simplechat</title> 
 </head> 
 <body>
+
 	<article id="chat">
 		<section id="title">
 			<h1>SimpleChat</h1>
@@ -22,6 +23,7 @@
 			</form>
 		</section>
 	</article>
+
 	<article id="login">
 		<section>
 			<form>
@@ -40,5 +42,5 @@
 		</section>
 	</article>
 	
-	<script language="javascript" type="text/javascript" src="script.js"></script>
+	<script type="module" src="script.js"></script>
 </body>
