--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				</div> 
 				<div>
 					<label>color</label>
-					<input type="typetext" value="" placeholder="color">
+					<div id="colors"></div>
 				</div>
 				<div>
 					<button type="submit">go</button>
