--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-
-	
-	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-	
-	<link rel="stylesheet" href="styles.css"> 
 	<title>Simplechat</title> 
+
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">	
+	
+	<link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">	
+	<link rel="stylesheet" href="styles.css"> 
 </head> 
 <body>
 
